<resources>
    <string name="app_name">TwitterClone</string>
    <string name="post_content">Post content here...</string>
    <string name="post_author_username">\@UserName</string>
    <string name="post_author_name">Author Name</string>
    <string name="param_tres">Paramètres</string>
    <string name="notifications">Notifications</string>
    <string name="compte">Compte</string>
    <string name="supprimer">Supprimer</string>
    <string name="mode">Mode</string>
    <string name="se_d_connecter">Se Déconnecter</string>
    <string name="informations_personnelles">Informations personnelles</string>
    <string name="modifier_photo">Modifier photo</string>
    <string name="modifier_la_photo_de_profile">Modifier la photo de profile</string>
    <string name="photo_de_profil">Photo de profil</string>
    <string name="nom_utilisateur">Nom utilisateur :</string>
    <string name="nom_pr_noms">Nom Prénoms :</string>
    <string name="t_l_phone">Téléphone :</string>
    <string name="email">Email :</string>
    <string name="retour" />
    <string name="parametres" />
    <string name="post_likes_count">0</string>
    <string name="post_comments_count">0</string>
    <string name="like_button">Bouton permettant de liker un post</string>
    <string name="post_time_ago">·  18h</string>
    <string name="share_button">Boutton permettant de partager un post</string>
    <string name="comment_button">Bouton permettant de commenter un post</string>
    <string name="more_actions_button">Boutton permettant d\'ouvrir un dialogue avec toute les actions</string>
    <string name="post_created_hour">18:55</string>
    <string name="post_created_date">17/12/2024</string>
    <string name="centerd_dott">·</string>
    <string name="header_title_posts">Post</string>
    <string name="welcome_message">Bienvenue %1$s !</string>

</resources>